--- a/.gitattributes
+++ b/.gitattributes
@@ -15,3 +15,17 @@
 *.PDF	 diff=astextplain
 *.rtf	 diff=astextplain
 *.RTF	 diff=astextplain
+
+# Declare files that will always have CRLF line endings on checkout.
+*.vbp text eol=crlf
+*.frm text eol=crlf
+*.cls text eol=crlf
+*.bas text eol=crlf
+*.dsr text eol=crlf
+*.ini text eol=crlf
+
+# Denote all files that are truly binary and should not be modified.
+*.frx binary
+*.exe binary
+*.dll binary
+*.ocx binary
